Edited card style animation - product card

--- a/frontend-pos/src/assets/i18n/en.json
+++ b/frontend-pos/src/assets/i18n/en.json
@@ -20,5 +20,9 @@
     "STATISTICS": "Statistics",
     "USERS": "Users",
     "SIGN-OUT": "Log out"
+  },
+  "ITEM-CARD": {
+    "CATEGORY":"Cat.",
+    "CODE":"Cod."
   }
 }
