Added category ALL

--- a/frontend-pos/src/assets/i18n/es.json
+++ b/frontend-pos/src/assets/i18n/es.json
@@ -24,5 +24,8 @@
   "ITEM-CARD": {
     "CATEGORY":"Cat.",
     "CODE":"Cod."
+  },
+  "PRODUCTS": {
+    "CATEGORY-ALL-DESCRIPTION": "TODAS"
   }
 }
