DEV - Added placeholder and label using i18n

--- a/frontend-pos/src/assets/i18n/en.json
+++ b/frontend-pos/src/assets/i18n/en.json
@@ -27,5 +27,9 @@
   },
   "PRODUCTS": {
     "CATEGORY-ALL-DESCRIPTION": "ALL"
+  },
+  "BASKET": {
+    "SEARCH-PRODUCT-BAR-LABEL": "Search product",
+    "SEARCH-PRODUCT-BAR-PLACEHOLDER": "Enter a description or barcode"
   }
 }
