--- a/frontend-pos/src/assets/i18n/es.json
+++ b/frontend-pos/src/assets/i18n/es.json
@@ -27,5 +27,9 @@
   },
   "PRODUCTS": {
     "CATEGORY-ALL-DESCRIPTION": "TODAS"
+  },
+  "BASKET": {
+    "SEARCH-PRODUCT-BAR-LABEL": "Buscar Producto",
+    "SEARCH-PRODUCT-BAR-PLACEHOLDER": "Ingrese una descripción o Código de barras..."
   }
 }
