--- a/frontend-pos/src/assets/i18n/en.json
+++ b/frontend-pos/src/assets/i18n/en.json
@@ -22,8 +22,8 @@
     "SIGN-OUT": "Log out"
   },
   "ITEM-CARD": {
-    "CATEGORY":"Cat.",
-    "CODE":"Cod."
+    "CATEGORY": "Cat.",
+    "CODE": "Cod."
   },
   "PRODUCTS": {
     "CATEGORY-ALL-DESCRIPTION": "ALL"
@@ -31,5 +31,9 @@
   "BASKET": {
     "SEARCH-PRODUCT-BAR-LABEL": "Search product",
     "SEARCH-PRODUCT-BAR-PLACEHOLDER": "Enter a description or barcode"
+  },
+  "MISCELLANEOUS": {
+    "SEARCHING": "Searching ...",
+    "NOT-FOUND": "Not found"
   }
 }
