Arrange side panel order selector

--- a/frontend-pos/src/assets/i18n/en.json
+++ b/frontend-pos/src/assets/i18n/en.json
@@ -30,7 +30,12 @@
   },
   "BASKET": {
     "SEARCH-PRODUCT-BAR-LABEL": "Search product",
-    "SEARCH-PRODUCT-BAR-PLACEHOLDER": "Enter a description or barcode"
+    "SEARCH-PRODUCT-BAR-PLACEHOLDER": "Enter a description or barcode",
+    "ORDER-SELECTOR": {
+      "CURRENT-ORDER": "Current order",
+      "FINISH-ORDER": "Finish order",
+      "SUBTOTAL": "Subtotal"
+    }
   },
   "MISCELLANEOUS": {
     "SEARCHING": "Searching ...",
