--- a/frontend-pos/src/assets/i18n/es.json
+++ b/frontend-pos/src/assets/i18n/es.json
@@ -34,7 +34,8 @@
     "ORDER-SELECTOR": {
       "CURRENT-ORDER": "Orden actual",
       "FINISH-ORDER": "Finalizar orden",
-      "SUBTOTAL": "Subtotal"
+      "SUBTOTAL": "Subtotal",
+      "DELETE-ORDER": "Eliminar Orden"
     }
   },
   "MISCELLANEOUS": {
