--- a/frontend-pos/src/assets/i18n/es.json
+++ b/frontend-pos/src/assets/i18n/es.json
@@ -37,11 +37,19 @@
       "SUBTOTAL": "Subtotal",
       "DELETE-ORDER": "Eliminar Orden",
       "ADD-ORDER": "Agregar Orden",
-      "ORDER-DETAIL": "Detalle Ordenes"
+      "ORDER-DETAIL": "Detalle Ordenes",
+      "DELETE-CURRENT-ORDER": {
+        "TITLE": "Eliminar Orden",
+        "DESCRIPTION": "¿Está seguro que desea eliminar la orden actual?"
+      }
     }
   },
   "MISCELLANEOUS": {
     "SEARCHING": "Buscando ...",
     "NOT-FOUND": "No encontrado"
+  },
+  "GENERICS": {
+    "YES": "Si",
+    "NO": "No"
   }
 }
